minor fix: overflow added in mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -403,14 +403,12 @@ body.night-mode .background {
     div.glass {
         flex-direction: column;
         align-items: center;
-        overflow-x:hidden;
     }
 }
 
 @media screen and (max-width: 410px){
     div.glass {
         flex-direction: column;
-        align-items: flex-start;
-        overflow-x:hidden;
+        align-items: center;
     }
 }
